Added README, reworked connector to be able to set both location and note at the same time.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meshblu-lync-status",
-  "description": "Get and set Lync status",
+  "description": "Lync connector for Octoblu",
   "repository": "ra4king/meshblu-lync-status",
   "version": "1.0.0",
   "main": "connector.js",
